Nearly done with standard database implementation and finally move on to implementing the event stuff.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,12 @@ project(home_server)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
+
+find_package(Boost REQUIRED)
+
 file(GLOB SRC "src/*")
 add_executable(home_server ${SRC})
+target_link_libraries(home_server Boost::boost)
 
 include(CTest)
 add_subdirectory(tests)
