Added util for time printing, added single line table insert.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,5 +1,8 @@
-file(GLOB BITSET_SRC "test_bitset.cpp" "../src/Bitset.hpp" "../src/bitset_util.hpp")
+file(GLOB UTILS_SRC "utils.hpp" "test_utils.cpp" "../src/util.hpp")
+add_executable(test_Utils ${UTILS_SRC})
+add_test(NAME test_Utils COMMAND test_Utils)
 
+file(GLOB BITSET_SRC "test_bitset.cpp" "../src/Bitset.hpp" "../src/bitset_util.hpp")
 add_executable(test_Bitset ${BITSET_SRC})
 add_test(NAME test_Bitset COMMAND test_Bitset)
 
