used aarch cross compilation for binary creation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,10 @@ find_package(Boost COMPONENTS REQUIRED)
 file(GLOB SRC "src/*")
 if(WIN32)
     add_compile_definitions(_WIN32_WINNT=0x0601)
-    include_directories(${Boost_INCLUDE_DIR})
+else()
+    add_compile_options(-fpermissive)
 endif()
+    include_directories(${Boost_INCLUDE_DIR})
 add_executable(home_server ${SRC})
 target_link_libraries(home_server PRIVATE Boost::boost Boost::headers)
 
