Added static std lib linking

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,9 +12,9 @@ if(WIN32)
 else()
     add_compile_options(-fpermissive)
 endif()
-    include_directories(${Boost_INCLUDE_DIR})
+include_directories(${Boost_INCLUDE_DIR})
 add_executable(home_server ${SRC})
-target_link_libraries(home_server PRIVATE Boost::boost Boost::headers)
+target_link_libraries(home_server PRIVATE -static Boost::boost Boost::headers)
 
 include(CTest)
 add_subdirectory(tests)
