added processor info to cmake for cross compilation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,11 @@ if(WIN32)
 else()
     add_compile_options(-fpermissive)
 endif()
+
+if (${CMAKE_CXX_COMPILER} STREQUAL "/usr/bin/aarch64-linux-gnu-g++")
+    message("Setting cpu capabilities for the raspberry pi")
+    set(CMAKE_CXX_FLAGS "-mtune=cortex-a76 $CMAKE_CXX_FLAGS")
+endif()
 include_directories(${Boost_INCLUDE_DIR})
 add_executable(home_server ${SRC})
 target_link_libraries(home_server PRIVATE -static Boost::boost Boost::headers)
