Had to add boost source to support cross compilation support as precompiled boost made running impossible.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,6 @@ project(home_server)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 
-find_package(Boost COMPONENTS REQUIRED)
 
 file(GLOB SRC "src/*")
 if(WIN32)
@@ -16,10 +15,74 @@ endif()
 if (${CMAKE_CXX_COMPILER} STREQUAL "/usr/bin/aarch64-linux-gnu-g++")
     message("Setting cpu capabilities for the raspberry pi")
     set(CMAKE_CXX_FLAGS "-mtune=cortex-a76 $CMAKE_CXX_FLAGS")
+    set(CMAKE_SYSTEM_PROCESSOR "aarch64")
+    # boost is added as submodule to be compiled correctly for the platform
+    include(FetchContent)
+    function (fetch_boost_component component)
+        FetchContent_Declare(boost_${component}
+            GIT_REPOSITORY https://github.com/boostorg/${component}.git
+            GIT_TAG boost-1.84.0
+            GIT_PROGRESS TRUE
+        )
+        FetchContent_MakeAvailable(boost_${component})
+        include_directories(${boost_${component}_SOURCE_DIR}/include)
+    endfunction()
+    fetch_boost_component(align)
+    fetch_boost_component(assert)
+    fetch_boost_component(config)
+    fetch_boost_component(context)
+    fetch_boost_component(coroutine)
+    fetch_boost_component(date_time)
+    fetch_boost_component(system)
+    fetch_boost_component(throw_exception)
+    fetch_boost_component(core)
+    fetch_boost_component(static_assert)
+    fetch_boost_component(mp11)
+    fetch_boost_component(pool)
+    fetch_boost_component(predef)
+    fetch_boost_component(smart_ptr)
+    fetch_boost_component(exception)
+    fetch_boost_component(move)
+    fetch_boost_component(type_traits)
+    fetch_boost_component(utility)
+    fetch_boost_component(algorithm)
+    fetch_boost_component(io)
+    fetch_boost_component(lexical_cast)
+    fetch_boost_component(numeric_conversion)
+    fetch_boost_component(range)
+    fetch_boost_component(tokenizer)
+    fetch_boost_component(winapi)
+    fetch_boost_component(variant2)
+    fetch_boost_component(integer)
+    fetch_boost_component(tuple)
+    fetch_boost_component(preprocessor)
+    fetch_boost_component(array)
+    fetch_boost_component(bind)
+    fetch_boost_component(concept_check)
+    fetch_boost_component(function)
+    fetch_boost_component(iterator)
+    fetch_boost_component(mpl)
+    fetch_boost_component(regex)
+    fetch_boost_component(unordered)
+    fetch_boost_component(container)
+    fetch_boost_component(conversion)
+    fetch_boost_component(container_hash)
+    fetch_boost_component(detail)
+    fetch_boost_component(optional)
+    fetch_boost_component(function_types)
+    fetch_boost_component(fusion)
+    fetch_boost_component(intrusive)
+    fetch_boost_component(describe)
+    fetch_boost_component(typeof)
+    fetch_boost_component(functional)
+    fetch_boost_component(asio)
+    #set(Boost_LIBRARIES boost_alogorithm boost_asio boost_config)
+else()
+    find_package(Boost REQUIRED)
+    include_directories(${Boost_INCLUDE_DIR})
 endif()
-include_directories(${Boost_INCLUDE_DIR})
 add_executable(home_server ${SRC})
-target_link_libraries(home_server PRIVATE -static Boost::boost Boost::headers)
+target_link_libraries(home_server PRIVATE -static ${Boost_LIBRARIES})
 
 include(CTest)
 add_subdirectory(tests)
