--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,8 +17,18 @@ if (${CMAKE_CXX_COMPILER} STREQUAL "/usr/bin/aarch64-linux-gnu-g++")
     message("Setting cpu capabilities for the raspberry pi")
     set(CMAKE_CXX_FLAGS "-mtune=cortex-a76 $CMAKE_CXX_FLAGS")
     set(CMAKE_SYSTEM_PROCESSOR "aarch64")
-    # boost is added as submodule to be compiled correctly for the platform
+
     include(FetchContent)
+
+    FetchContent_Declare(openssl
+        GIT_REPOSITORY https://github.com/janbar/openssl-cmake.git
+        GIT_PROGRESS TRUE
+    )
+    FetchContent_MakeAvailable(openssl)
+    include_directories(${openssl_BINARY_DIR}/include)
+    set(additional_lib_opts "-static \"${openssl_BINARY_DIR}/ssl/libssl.a\" \"${openssl_BINARY_DIR}/crypto/libcrypto.a\"")
+
+    # boost is added as submodule to be compiled correctly for the platform
     function (fetch_boost_component component)
         FetchContent_Declare(boost_${component}
             GIT_REPOSITORY https://github.com/boostorg/${component}.git
@@ -77,14 +87,16 @@ if (${CMAKE_CXX_COMPILER} STREQUAL "/usr/bin/aarch64-linux-gnu-g++")
     fetch_boost_component(typeof)
     fetch_boost_component(functional)
     fetch_boost_component(asio)
-    #set(Boost_LIBRARIES boost_alogorithm boost_asio boost_config)
 else()
     find_package(Boost REQUIRED)
     include_directories(${Boost_INCLUDE_DIR})
+    find_package(OpenSSL REQUIRED)
+    set(additional_lib_opts OpenSSL::SSL)
 endif()
 
 add_executable(home_server ${SRC})
-target_link_libraries(home_server PRIVATE -static ${Boost_LIBRARIES})
+target_compile_definitions(home_server PUBLIC CROW_ENABLE_SSL)
+target_link_libraries(home_server PRIVATE ${additional_lib_opts} ${Boost_LIBRARIES})
 
 include(CTest)
 add_subdirectory(tests)
