--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,13 +20,14 @@ if (${CMAKE_CXX_COMPILER} STREQUAL "/usr/bin/aarch64-linux-gnu-g++")
 
     include(FetchContent)
 
-    FetchContent_Declare(openssl
-        GIT_REPOSITORY https://github.com/janbar/openssl-cmake.git
-        GIT_PROGRESS TRUE
-    )
-    FetchContent_MakeAvailable(openssl)
-    include_directories(${openssl_BINARY_DIR}/include)
-    set(additional_lib_opts "-static \"${openssl_BINARY_DIR}/ssl/libssl.a\" \"${openssl_BINARY_DIR}/crypto/libcrypto.a\"")
+    # FetchContent_Declare(openssl
+    #     GIT_REPOSITORY https://github.com/janbar/openssl-cmake.git
+    #     GIT_PROGRESS TRUE
+    # )
+    # FetchContent_MakeAvailable(openssl)
+    # include_directories(${openssl_BINARY_DIR}/include)
+    # set(additional_lib_opts "-static \"${openssl_BINARY_DIR}/ssl/libssl.a\" \"${openssl_BINARY_DIR}/crypto/libcrypto.a\"")
+    set(additional_lib_opts "-static")
 
     # boost is added as submodule to be compiled correctly for the platform
     function (fetch_boost_component component)
@@ -90,12 +91,12 @@ if (${CMAKE_CXX_COMPILER} STREQUAL "/usr/bin/aarch64-linux-gnu-g++")
 else()
     find_package(Boost REQUIRED)
     include_directories(${Boost_INCLUDE_DIR})
-    find_package(OpenSSL REQUIRED)
-    set(additional_lib_opts OpenSSL::SSL)
+    # find_package(OpenSSL REQUIRED)
+    # set(additional_lib_opts OpenSSL::SSL)
 endif()
 
 add_executable(home_server ${SRC})
-target_compile_definitions(home_server PUBLIC CROW_ENABLE_SSL)
+# target_compile_definitions(home_server PUBLIC CROW_ENABLE_SSL)
 target_link_libraries(home_server PRIVATE ${additional_lib_opts} ${Boost_LIBRARIES})
 
 include(CTest)
