Added static flag for cross compilation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,7 @@ if (${CMAKE_CXX_COMPILER} STREQUAL "/usr/bin/aarch64-linux-gnu-g++")
     )
     option(WITH_APPS "" OFF)
     FetchContent_MakeAvailable(openssl)
-    target_link_libraries(home_server ssl)
+    target_link_libraries(home_server -static ssl)
     include_directories(${openssl_BINARY_DIR}/include)
     set(CMAKE_VERBOSE_MAKEFILE FALSE)
     # add_subdirectory(${openssl_SOURCE_DIR})
