PC build now works again

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,7 +104,7 @@ if (${CMAKE_CXX_COMPILER} STREQUAL "/usr/bin/aarch64-linux-gnu-g++")
 else()
     find_package(Boost REQUIRED)
     include_directories(${Boost_INCLUDE_DIR})
-    # find_package(OpenSSL REQUIRED)
+    find_package(OpenSSL REQUIRED)
     # set(additional_lib_opts OpenSSL::SSL)
     target_link_libraries(home_server PRIVATE OpenSSL::SSL ${Boost_LIBRARIES})
 endif()
